--- a/utilities.css
+++ b/utilities.css
@@ -32,7 +32,7 @@
 	border-color:var(--primary);
 	color:var(--primary);
 }
-.btn-secondary{
+a .btn-secondary{
 	background:transparent;
 	color:var(--primary);
 	border-color:var(--primary);
