--- a/utilities.css
+++ b/utilities.css
@@ -32,7 +32,7 @@
 	border-color:var(--primary);
 	color:var(--primary);
 }
-a .btn-secondary{
+.btn-secondary{
 	background:transparent;
 	color:var(--primary);
 	border-color:var(--primary);
